# duroxide

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  run-sqlite-objs-tests.sh
.github/: copilot-instructions.md
docs/: ORCHESTRATION-GUIDE.md  metrics-specification.md  provider-implementation-guide.md  provider-testing-guide.md
docs/proposals/: activity-tags.md  kv-delta-table.md  kv-per-key-versioning.md  orchestration-kv-store-test-plan.md  orchestration-kv-store.md
examples/: perf_compare.rs
migrations/: 20240109000000_add_activity_tags.sql  20240110000000_add_kv_store.sql  20240111000000_add_kv_last_updated.sql  20240112000000_add_kv_delta.sql
sqlite-objs/: .env.example  Cargo.toml
sqlite-objs/repro/: PERF_MATRIX.md  README.md  azure_vfs_repro.rs
sqlite-objs/src/: lib.rs
sqlite-objs/tests/: provider_validations.rs
src/: lib.rs  provider_validations.rs
src/client/: mod.rs
src/provider_validation/: atomicity.rs  cancellation.rs  deletion.rs  error_handling.rs  kv_store.rs  lock_expiration.rs  long_polling.rs  mod.rs  multi_execution.rs  poison_message.rs  queue_semantics.rs  sessions.rs  tag_filtering.rs
src/providers/: instrumented.rs  mod.rs  sqlite.rs
src/runtime/: execution.rs  limits.rs  mod.rs  observability.rs  replay_engine.rs  replay_engine_tests.rs
src/runtime/dispatchers/: orchestration.rs  worker.rs
tests/: cancellation_tests.rs  e2e_samples.rs  kv_store_tests.rs  long_poll_tests.rs  observability_tests.rs  poison_message_tests.rs  provider_atomic_tests.rs  queue_event_tests.rs  session_e2e_tests.rs  sqlite_provider_validations.rs  sqlite_tests.rs  tag_serde_tests.rs  typed_composability_tests.rs
tests/common/: fault_injection.rs
tests/replay_engine/: action_to_event.rs  helpers.rs  kv.rs  mod.rs
tests/scenarios/: version_replay_bug.rs
